--- a/english.html
+++ b/english.html
@@ -539,9 +539,9 @@ Error message and password prompt
 
 <li>Grape leaves</li>
 
-<li>Gratitude for the sun</li>
+<li>Grasyani</li>
 
-<li>Graziani</li>
+<li>Gratitude for the sun</li>
 
 <li>Green beans</li>
 
@@ -1071,7 +1071,7 @@ Error message and password prompt
 
 <li>The lawyer</li>
 
-<li>The line for Graziani</li>
+<li>The line for Grasyani</li>
 
 <li>The neighbor`s grass</li>
 
@@ -9106,10 +9106,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200501131446771" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20200503075637601" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200501135023243" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200503075709194" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9118,7 +9118,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Life is for those who can't deal with drugs]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Grasyani [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9138,7 +9138,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200501125741134" title="$:/temp/search">
+<div created="20161023184814872" modified="20200503075632187" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9698,7 +9698,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216150039212" modified="20200501125830442" tags="[[Food addicts]] [[When they sleep]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]] [[The estate where I grew up]]" title="Baking">
+<div created="20200216150039212" modified="20200502110402131" tags="[[Food addicts]] [[When they sleep]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]] [[The estate where I grew up]] Bread" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -9950,10 +9950,11 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
  &lt;&lt;heblink [[כמולונז]]&gt;&gt;
 </pre>
 </div>
-<div created="20200308122901426" modified="20200308123026958" tags="[[Food addicts]]" title="Bread">
+<div created="20200308122901426" modified="20200502113033442" tags="[[Food addicts]] Restaurants [[Coffee shops]]" title="Bread">
 <pre>[img[pictures/lechem.jpg]]
 
 
+&lt;&lt;list-links filter:&quot;[tag[Bread]]&quot;&gt;&gt;
 
 
  &lt;&lt;heblink [[לחם]]&gt;&gt;</pre>
@@ -10446,7 +10447,7 @@ It's already November, [[Wyclef|Wyclef Jean]] should have come back by now. It's
 
  &lt;&lt;heblink [[קפה וממתקים]]&gt;&gt;</pre>
 </div>
-<div created="20200213160902173" modified="20200213161305282" tags="[[Food addicts]] Coffee Metafiction" title="Coffee shops">
+<div created="20200213160902173" modified="20200502110536806" tags="[[Food addicts]] Coffee Metafiction Bread" title="Coffee shops">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Coffee shops]]&quot;&gt;&gt;
@@ -10680,7 +10681,7 @@ This is [[Sweet David Byrne|http://davidbyrne.com/]].
 
 </pre>
 </div>
-<div created="20200225190656305" modified="20200225190838834" tags="[[Here in the Ghetto]] Restaurants [[Coffee shops]] Kitchens" title="Delicatessen">
+<div created="20200225190656305" modified="20200502112614519" tags="[[Here in the Ghetto]] Restaurants [[Coffee shops]] Kitchens Bread" title="Delicatessen">
 <pre>[img[pictures/delicatessen-tel-aviv.jpg]]
 
 
@@ -10688,7 +10689,7 @@ This is [[Sweet David Byrne|http://davidbyrne.com/]].
  &lt;&lt;heblink [[דליקטסן]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215113637898" modified="20200219133116379" tags="Meals Coffee [[Coffee shops]] Restaurants [[The kitchen by Genevieve]]" title="Delicatessen Chez Genevieve">
+<div created="20200215113637898" modified="20200502111609144" tags="Meals Coffee [[Coffee shops]] Restaurants [[The kitchen by Genevieve]] Bread" title="Delicatessen Chez Genevieve">
 <pre>[img[pictures/delicatessen.jpg]]
 
 
@@ -11049,7 +11050,7 @@ In the moment I saw sweet [[Angelic]] she looked beautiful to me, but I was sure
  &lt;&lt;heblink [[תהפוכת]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213154202937" modified="20200501132004318" tags="Kitchens [[Monkeys with car keys]] Coffee [[Life is for those who can't deal with drugs]]" title="Food addicts">
+<div created="20200213154202937" modified="20200502115602922" tags="Kitchens [[Monkeys with car keys]] Coffee [[Life is for those who can't deal with drugs]] Bread" title="Food addicts">
 <pre>[img[pictures/chayot-ochel.jpg]] 
 
 !!![[The team]]:
@@ -11154,7 +11155,7 @@ Or as Alfred used to say:
 
 </pre>
 </div>
-<div created="20200306140942045" modified="20200306141051952" tags="Recipes [[The kitchen by Genevieve]]" title="Garlic and herbs butter">
+<div created="20200306140942045" modified="20200502112447286" tags="Recipes [[The kitchen by Genevieve]] Bread" title="Garlic and herbs butter">
 <pre>[img[pictures/genevieve-green-butter.jpg]]
 
 
@@ -11234,7 +11235,7 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
 
 </pre>
 </div>
-<div created="20200226072008566" modified="20200226072129972" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]]" title="Gili's kiosk">
+<div created="20200226072008566" modified="20200502112539788" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] Bread" title="Gili's kiosk">
 <pre>[img[pictures/gili.jpg]]
 
 
@@ -11251,6 +11252,14 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
  &lt;&lt;heblink [[עלי גפן]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20200225185730232" modified="20200503075625568" tags="[[Here in the Ghetto]] [[Coffee shops]] Coffee Baking Bread" title="Grasyani">
+<pre>[img[pictures/grasyani.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[גרציאני]]&gt;&gt;</pre>
 </div>
 <div created="20200307181155676" modified="20200330165930487" tags="[[Iry claims]] [[The global village]] [[Palms of the hands]]" title="Gratitude for the sun">
 <pre>[img[pictures/birkat-hashemesh.jpg]]
@@ -11269,14 +11278,6 @@ I like to do it with music, [[as well|A tile’s etude]], for example [[this|htt
 
 
 </pre>
-</div>
-<div created="20200225185730232" modified="20200225185911534" tags="[[Here in the Ghetto]] [[Coffee shops]] Coffee Baking" title="Graziani">
-<pre>[img[pictures/grasyani.jpg]]
-
-
-
-
- &lt;&lt;heblink [[גרציאני]]&gt;&gt;</pre>
 </div>
 <div created="20200307174002630" modified="20200307174129620" tags="Recipes [[Christmas dinner Recipes]]" title="Green beans">
 <pre>[img[pictures/sheooit.jpg]]
@@ -11393,7 +11394,7 @@ Also now, since I've opened this site, she hasn't stopped [[writing|Me writing]]
 
 </pre>
 </div>
-<div created="20200405105856295" modified="20200409170256077" tags="[[Here in the Ghetto]] [[Food addicts]] [[Corona beings]] Restaurants" title="HaAchims grocery store">
+<div created="20200405105856295" modified="20200502110739092" tags="[[Here in the Ghetto]] [[Food addicts]] [[Corona beings]] Restaurants Bread" title="HaAchims grocery store">
 <pre>[img[pictures/makolet-haachim.jpg]]
 
 
@@ -12137,7 +12138,7 @@ That what happens when a man follows the [[Jazz]]- he arrives 10 Mikve Israel an
  &lt;&lt;heblink [[לורין היל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200223182814598" modified="20200223191942639" tags="[[Here in the Ghetto]] Coffee Baking Metafiction" title="lechem-tushia Sheinkin">
+<div created="20200223182814598" modified="20200502110912038" tags="[[Here in the Ghetto]] Coffee Baking Metafiction Bread" title="lechem-tushia Sheinkin">
 <pre>[img[pictures/lechem-tushiya.jpg]]
 
 
@@ -12155,7 +12156,7 @@ That what happens when a man follows the [[Jazz]]- he arrives 10 Mikve Israel an
  &lt;&lt;heblink [[כדורי קטניות ברוטב קוקוס וקארי ירוק]]&gt;&gt;
 </pre>
 </div>
-<div created="20200219162401317" modified="20200219162549802" tags="[[Here in the Ghetto]] [[Coffee shops]] Restaurants Baking [[Food addicts]] Kitchens" title="Lehamim">
+<div created="20200219162401317" modified="20200502110927334" tags="[[Here in the Ghetto]] [[Coffee shops]] Restaurants Baking [[Food addicts]] Kitchens Bread" title="Lehamim">
 <pre>[img[pictures/breads.jpg]]
 
 
@@ -12170,7 +12171,7 @@ That what happens when a man follows the [[Jazz]]- he arrives 10 Mikve Israel an
 
 </pre>
 </div>
-<div created="20200410161820933" modified="20200410164327845" tags="[[Here in the Ghetto]] [[Corona beings]] Baking [[Coffee shops]] Kitchens" title="Lehamim and corona">
+<div created="20200410161820933" modified="20200502110938148" tags="[[Here in the Ghetto]] [[Corona beings]] Baking [[Coffee shops]] Kitchens Bread" title="Lehamim and corona">
 <pre>[img[pictures/lehamim-bacorona.jpg]]
 
 
@@ -12266,7 +12267,7 @@ Bottom line is, if you're standing in front of whatever it is and hesitating, wo
  &lt;&lt;heblink [[סלט חסה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200219153806611" modified="20200501131432202" tags="[[Hunky Dory]] [[Monkeys with car keys]]" title="Life is for those who can't deal with drugs">
+<div created="20200219153806611" modified="20200501141433252" tags="[[Hunky Dory]] [[Monkeys with car keys]]" title="Life is for those who can't deal with drugs">
 <pre>[img[pictures/hachaim-noadoo.gif]]
 
 
@@ -12674,7 +12675,7 @@ Sweet, beautiful, goodie girl, sensitive, caring [[Meadow Soprano|https://www.im
 
 </pre>
 </div>
-<div created="20200213154636920" modified="20200426192906732" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]] Families" title="Meals">
+<div created="20200213154636920" modified="20200502111014930" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]] Families Bread" title="Meals">
 <pre>[img[pictures/aruchot.jpg]]
 
 
@@ -12824,13 +12825,13 @@ I’ve watched the interesting [[film|https://www.imdb.com/title/tt9358200/]] ab
 
 </pre>
 </div>
-<div created="20200217140255366" modified="20200217141338003" tags="[[Here in the Ghetto]] Restaurants [[Food addicts]] Kitchens" title="Miznon">
+<div created="20200217140255366" modified="20200502112843182" tags="[[Here in the Ghetto]] Restaurants [[Food addicts]] Kitchens Bread" title="Miznon">
 <pre>[img[pictures/miznon.jpg]]
 
 
 !!![[Tomer]]:
 
-The [[Miznon|https://miznon.com/]] that's in the picture is on 30 King George, not far from the beloved [[420]]. I wasn't in the ones abroad, nor in the one in Ramat Hahayal, but I was more than once in the Ibn Gabirol's branch. Everything is very tasty inside a pitta and in a reasonable price. I love the chickens' livers and the Lima masbaha the most. [[My Nano|Nano and I]] loves the bananas' line. It's very yummy in [[Eyal Shanni's|https://en.wikipedia.org/wiki/Eyal_Shani]] Miznons and there are also a run over potato, soda or spritz and more on the menu, and music, and lovely employs in the counter or in the open kitchens. A pleasure that is a must.  
+The [[Miznon|https://miznon.com/]] that's in the picture is on 30 King George, not far from the beloved [[420]]. I wasn't in the ones abroad, nor in the one in Ramat Hahayal, but I was more than once in the Ibn Gabirol's branch. Everything is very tasty inside a pitta and in a reasonable price. I love the chickens' livers and the Lima Msabbaha the most. [[My Nano|Nano and I]] loves the bananas' line. It's very yummy in [[Eyal Shanni's|https://en.wikipedia.org/wiki/Eyal_Shani]] Miznons and there are also a run over potato, soda or spritz and more on the menu, and music, and lovely employs in the counter or in the open kitchens. A pleasure that is a must.  
 
 
 
@@ -13227,7 +13228,7 @@ That’s why I love the palms of my hands, they don’t feed me shit.
 
 </pre>
 </div>
-<div created="20200219173952522" modified="20200219174045940" tags="[[Christmas dinner Recipes]] Recipes" title="Panettone">
+<div created="20200219173952522" modified="20200502120442092" tags="[[Christmas dinner Recipes]] Recipes Bread" title="Panettone">
 <pre>[img[pictures/panatone.jpg]]
 
 
@@ -13931,7 +13932,7 @@ For instance:
  &lt;&lt;heblink [[שלום חנוך]]&gt;&gt;
 </pre>
 </div>
-<div created="20200217142305955" modified="20200426141702796" tags="[[Here in the Ghetto]] [[Food addicts]] Families" title="Shoretzky">
+<div created="20200217142305955" modified="20200502113325291" tags="[[Here in the Ghetto]] [[Food addicts]] Families Bread" title="Shoretzky">
 <pre>[img[pictures/shorezky.jpg]]
 
 !!![[Tomer]]:
@@ -14231,7 +14232,7 @@ Sunny one so true, I love you
  &lt;&lt;heblink [[Sunny]]&gt;&gt;
 </pre>
 </div>
-<div created="20200306142158905" modified="20200306142331060" tags="Recipes [[Christmas dinner Recipes]]" title="Tahini, tomatoes and zucchini toasts">
+<div created="20200306142158905" modified="20200502113420058" tags="Recipes [[Christmas dinner Recipes]] Bread" title="Tahini, tomatoes and zucchini toasts">
 <pre>[img[pictures/tost.jpg]]
 
 
@@ -14239,7 +14240,7 @@ Sunny one so true, I love you
  &lt;&lt;heblink [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]]&gt;&gt;
 </pre>
 </div>
-<div created="20200226065424547" modified="20200226065603791" tags="Coffee [[Here in the Ghetto]] Restaurants" title="Tal Bagels">
+<div created="20200226065424547" modified="20200502113409359" tags="Coffee [[Here in the Ghetto]] Restaurants Bread" title="Tal Bagels">
 <pre>[img[pictures/tal-bagels.jpg]]
 
 
@@ -14598,7 +14599,7 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
  &lt;&lt;heblink [[ההוסטל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213161521882" modified="20200219172816749" tags="Meals Kitchens Recipes" title="The kitchen by Genevieve">
+<div created="20200213161521882" modified="20200502114106777" tags="Meals Kitchens Recipes Bread" title="The kitchen by Genevieve">
 <pre>[img[pictures/genevieve-food.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[The kitchen by Genevieve]]&quot;&gt;&gt;
@@ -14625,13 +14626,13 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
  &lt;&lt;heblink [[עורכת הדין]]&gt;&gt;</pre>
 </div>
-<div created="20200325160957545" modified="20200401121433200" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] [[Corona beings]]" title="The line for Graziani">
+<div created="20200325160957545" modified="20200503075702675" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] [[Corona beings]] Bread" title="The line for Grasyani">
 <pre>[img[pictures/the-line-to-graziani.jpg]]
 
 
 !!![[Tomer]]:
 
-Here and now during the Corona times, not more than a hundred meters from home, the sweet Yaniv from [[Graziani]] drew circles on the floor in the entrance of the cafe, in a distance of two meters one from the other as well as arrows. You don’t enter the cafe but stand in the entrance, Avraham who makes great coffee is on the coffee machine that was put facing outwards, Yaniv is responsible for the breads, sandwiches and the rest of the delicious baked goods which you go straight home with. 
+Here and now during the Corona times, not more than a hundred meters from home, the sweet Yaniv from [[Grasyani]] drew circles on the floor in the entrance of the cafe, in a distance of two meters one from the other as well as arrows. You don’t enter the cafe but stand in the entrance, Avraham who makes great coffee is on the coffee machine that was put facing outwards, Yaniv is responsible for the breads, sandwiches and the rest of the delicious baked goods which you go straight home with. 
 
 
 
