--- a/index.html
+++ b/index.html
@@ -9215,10 +9215,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200501135049145" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20200503075729357" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200501141308781" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200503075732474" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9227,7 +9227,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[התור לגרציאני]] גרציאני [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9247,7 +9247,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200501125621721" title="$:/temp/search">
+<div created="20161023184814872" modified="20200503075724767" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10678,7 +10678,7 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Baking]]&gt;&gt;
 </pre>
 </div>
-<div created="20180128153940319" modified="20200501125639643" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]]" title="ארוחות">
+<div created="20180128153940319" modified="20200502113808726" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]] לחם" title="ארוחות">
 <pre>[img[pictures/aruchot.jpg]]
 
 !!![[יויו]]:
@@ -11061,7 +11061,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
-<div created="20190415190001072" modified="20200213161413930" tags="קפה [[חיות אוכל]] [[מטא בדיון]]" title="בתי קפה">
+<div created="20190415190001072" modified="20200502113847305" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -11076,7 +11076,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Coffee shops]]&gt;&gt;</pre>
 </div>
-<div created="20180704182012305" modified="20200426133700881" tags="מטבחים משפחות" title="בתים">
+<div created="20180704182012305" modified="20200502113905283" tags="מטבחים משפחות לחם" title="בתים">
 <pre>[img[pictures/batim.jpg]]
 
 !!![[הצוות]]:
@@ -12037,7 +12037,7 @@ Is where I want to be
 &lt;&lt;englink [[Potatoes' Gratin]]&gt;&gt;
 </pre>
 </div>
-<div created="20180715194223602" modified="20200225190010939" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה [[בתי קפה]]" title="גרציאני">
+<div created="20180715194223602" modified="20200503075604876" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה [[בתי קפה]] לחם" title="גרציאני">
 <pre>[img[pictures/grasyani.jpg]]
 
 !!![[תומר]]:
@@ -12047,7 +12047,7 @@ Is where I want to be
 
 
 
-&lt;&lt;englink [[Graziani]]&gt;&gt;
+&lt;&lt;englink [[Grasyani]]&gt;&gt;
 
 </pre>
 </div>
@@ -12204,7 +12204,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 &lt;&lt;englink [[RIP Dina]]&gt;&gt;</pre>
 </div>
-<div created="20181031153935874" modified="20200225190959884" tags="[[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] מסעדות קפה [[בתי קפה]] מטבחים" title="דליקטסן">
+<div created="20181031153935874" modified="20200502113937993" tags="[[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] מסעדות קפה [[בתי קפה]] מטבחים לחם" title="דליקטסן">
 <pre>[img[pictures/delicatessen-tel-aviv.jpg]]
 
 
@@ -12855,7 +12855,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[Hamigdalor]]&gt;&gt;</pre>
 </div>
-<div created="20170422140632892" modified="20200324163502445" tags="ארוחות מתכונים מטבחים [[האנקי דורי]]" title="המטבח על פי ז'נבייב">
+<div created="20170422140632892" modified="20200502114041416" tags="ארוחות מתכונים מטבחים [[האנקי דורי]] לחם" title="המטבח על פי ז'נבייב">
 <pre>[img[pictures/genevieve-food.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12875,7 +12875,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170206170428832" modified="20200426134012221" tags="[[הנחלה בה גדלתי]] ארוחות אפייה מטבחים משפחות" title="המטבח של הנחלה">
+<div created="20170206170428832" modified="20200502115251907" tags="[[הנחלה בה גדלתי]] ארוחות אפייה מטבחים משפחות לחם" title="המטבח של הנחלה">
 <pre>[img[pictures/hamitbach-shel-hanachala.jpg]]
 
 !!![[אווה]]:
@@ -13192,7 +13192,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20181107090226210" modified="20200226072231723" tags="[[כאן בגטו]] קפה [[בתי קפה]]" title="הקיוסק של גילי">
+<div created="20181107090226210" modified="20200502115318719" tags="[[כאן בגטו]] קפה [[בתי קפה]] לחם" title="הקיוסק של גילי">
 <pre>[img[pictures/gili.jpg]]
 
 !!![[תומר]]:
@@ -13277,7 +13277,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Teder/Romano]]&gt;&gt;</pre>
 </div>
-<div created="20200325160820858" modified="20200330171210722" tags="[[כאן בגטו]] [[בתי קפה]] קפה [[הלכות קורונה]]" title="התור לגרציאני">
+<div created="20200325160820858" modified="20200503075534043" tags="[[כאן בגטו]] [[בתי קפה]] קפה [[הלכות קורונה]] לחם" title="התור לגרציאני">
 <pre>[img[pictures/the-line-to-graziani.jpg]]
 
 
@@ -13288,7 +13288,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-&lt;&lt;englink [[The line for Graziani]]&gt;&gt;
+&lt;&lt;englink [[The line for Grasyiani]]&gt;&gt;
 </pre>
 </div>
 <div created="20170602111237129" modified="20200213171027914" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="וויקליף ז'אן">
@@ -13510,7 +13510,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Horse radish]]&gt;&gt;
 </pre>
 </div>
-<div created="20170620145929305" modified="20200213164325618" tags="[[קופים ממונעים]] קפה מטבחים" title="חיות אוכל">
+<div created="20170620145929305" modified="20200502115542910" tags="[[קופים ממונעים]] קפה מטבחים לחם" title="חיות אוכל">
 <pre>[img[pictures/chayot-ochel.jpg]] 
 
 ''אוכל שאנחנו מכינים ברגיל:''
@@ -13568,7 +13568,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Rear Window ]]&gt;&gt;</pre>
 </div>
-<div created="20170422160814236" modified="20200306141138768" tags="[[המטבח על פי ז'נבייב]] מתכונים" title="חמאת שום ועשבי תיבול">
+<div created="20170422160814236" modified="20200502115628107" tags="[[המטבח על פי ז'נבייב]] מתכונים לחם" title="חמאת שום ועשבי תיבול">
 <pre>[img[pictures/genevieve-green-butter.jpg]]
 
 !!![[ז'נבייב]]:
@@ -13769,7 +13769,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Tony Soprano]]&gt;&gt;</pre>
 </div>
-<div created="20170407152300115" modified="20200306142420338" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן">
+<div created="20170407152300115" modified="20200502115901076" tags="[[מתכוני ארוחת הכריסמס]] מתכונים לחם" title="טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן">
 <pre>[img[pictures/tost.jpg]]
 
 !!![[אווה]]:
@@ -13828,7 +13828,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Torte]]&gt;&gt;</pre>
 </div>
-<div created="20181209115549031" modified="20200226065659006" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]] קפה [[בתי קפה]] מטבחים" title="טל בייגלס">
+<div created="20181209115549031" modified="20200502115916140" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]] קפה [[בתי קפה]] מטבחים לחם" title="טל בייגלס">
 <pre>[img[pictures/tal-bagels.jpg]]
 
 !!![[תומר]]:
@@ -15355,7 +15355,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[Vegetarian lasagne]]&gt;&gt;
 </pre>
 </div>
-<div created="20181014115132718" modified="20200308123159542" tags="[[חיות אוכל]]" title="לחם">
+<div created="20181014115132718" modified="20200502110030828" tags="[[חיות אוכל]]" title="לחם">
 <pre>[img[pictures/lechem.jpg]]
 
 
@@ -15378,6 +15378,11 @@ We rise to play a greater part.
 
 
 
+&lt;&lt;list-links filter:&quot;[tag[לחם]]&quot;&gt;&gt;
+
+
+
+
 
 &lt;&lt;englink [[Bread]]&gt;&gt;
 
@@ -15389,7 +15394,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20190307134032762" modified="20200223183731550" tags="[[כאן בגטו]] [[מטא בדיון]] אפייה קפה" title="לחם תושיה שינקין">
+<div created="20190307134032762" modified="20200502120012912" tags="[[כאן בגטו]] [[מטא בדיון]] אפייה קפה לחם" title="לחם תושיה שינקין">
 <pre>[img[pictures/lechem-tushiya.jpg]]
 
 !!![[תומר]]:
@@ -15401,7 +15406,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[lechem-tushia Sheinkin]]&gt;&gt;
 </pre>
 </div>
-<div created="20180713195240465" modified="20200219162511210" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה [[בתי קפה]] מטבחים" title="לחמים">
+<div created="20180713195240465" modified="20200502120022723" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה [[בתי קפה]] מטבחים לחם" title="לחמים">
 <pre>[img[pictures/breads.jpg]]
 
 !!![[תומר]]:
@@ -15411,7 +15416,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Lehamim]]&gt;&gt;</pre>
 </div>
-<div created="20200410153607387" modified="20200420142305394" tags="[[כאן בגטו]] [[בתי קפה]] [[הלכות קורונה]] אפייה מטבחים" title="לחמים בקורונה">
+<div created="20200410153607387" modified="20200502120034997" tags="[[כאן בגטו]] [[בתי קפה]] [[הלכות קורונה]] אפייה מטבחים לחם" title="לחמים בקורונה">
 <pre>[img[pictures/lehamim-bacorona.jpg]]
 
 
@@ -16046,8 +16051,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[What truly happensd at Christmas dinner]]&gt;&gt;</pre>
 </div>
 <div created="20200426192521849" modified="20200426193153132" tags="[[כאן בגטו]] בתים מטבחים [[הלכות קורונה]] כביסה" title="מהחלון של המטבח">
-<pre>
-[img[pictures/kitchenswindow.jpg]]
+<pre>[img[pictures/kitchenswindow.jpg]]
 
 
 !!![[תומר]]:
@@ -16142,7 +16146,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[DJ and discs dudet]]&gt;&gt;</pre>
 </div>
-<div created="20190204104349203" modified="20200217140659868" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]] מטבחים" title="מזנון">
+<div created="20190204104349203" modified="20200502120106020" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]] מטבחים לחם" title="מזנון">
 <pre>[img[pictures/miznon.jpg]]
 
 [[תומר]]:
@@ -16197,7 +16201,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200426134754892" tags="בתים [[חיות אוכל]] משפחות" title="מטבחים">
+<div created="20190617131650064" modified="20200502120123673" tags="בתים [[חיות אוכל]] משפחות לחם" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
@@ -16307,7 +16311,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200405102558367" modified="20200422162318139" tags="[[כאן בגטו]] [[חיות אוכל]] [[בדרך לאן שהוא]] [[הלכות קורונה]] מסעדות" title="מכולת האחים">
+<div created="20200405102558367" modified="20200502120144065" tags="[[כאן בגטו]] [[חיות אוכל]] [[בדרך לאן שהוא]] [[הלכות קורונה]] מסעדות לחם" title="מכולת האחים">
 <pre>[img[pictures/makolet-haachim.jpg]]
 
 
@@ -16417,7 +16421,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Dangerous]]&gt;&gt;</pre>
 </div>
-<div created="20181018172329578" modified="20200213155504678" tags="[[חיות אוכל]] מטבחים" title="מסעדות">
+<div created="20181018172329578" modified="20200502120158548" tags="[[חיות אוכל]] מטבחים לחם" title="מסעדות">
 <pre>[img[pictures/misadot.jpg]]
 
 !!![[הצוות]]:
@@ -16686,7 +16690,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200426132241186" modified="20200426203956075" tags="אימהות ארוחות בתים ילדים" title="משפחות">
+<div created="20200426132241186" modified="20200502110009394" tags="אימהות ארוחות בתים ילדים" title="משפחות">
 <pre>[img[pictures/families.jpg]]
 
 
@@ -16783,9 +16787,7 @@ We rise to play a greater part.
 </pre>
 </div>
 <div created="20200429135615053" modified="20200429151216291" tags="[[כאן בגטו]] [[הלכות קורונה]] [[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="מתפללים בגינת בילו">
-<pre>
-
-[img[pictures/bilugarden.jpg]]
+<pre>[img[pictures/bilugarden.jpg]]
 
 
 !!![[תומר]]:
@@ -18687,7 +18689,7 @@ __אופן ההכנה____
 
 &lt;&lt;englink [[Roasted peppers]]&gt;&gt;</pre>
 </div>
-<div created="20170413193637751" modified="20200219174135650" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="פנטונה">
+<div created="20170413193637751" modified="20200502120425949" tags="[[מתכוני ארוחת הכריסמס]] מתכונים לחם" title="פנטונה">
 <pre>[img[pictures/panatone.jpg]]
 
 !!![[סוניה]]:
@@ -19820,7 +19822,7 @@ Fapina''
 
 &lt;&lt;englink [[Chocolate fudge]]&gt;&gt;</pre>
 </div>
-<div created="20180725153933793" modified="20200426135613484" tags="[[כאן בגטו]] [[חיות אוכל]] משפחות" title="שורצקי">
+<div created="20180725153933793" modified="20200502120555235" tags="[[כאן בגטו]] [[חיות אוכל]] משפחות לחם" title="שורצקי">
 <pre>[img[pictures/shorezky.jpg]]
 
 !!![[תומר]]:
